# PyGHGaq

./: README.md  pyproject.toml
pyghgaq/: __init__.py  constant.yml  hcp_registry.py  henry_coeff.py  pyghgaq.py
pyghgaq/functions/: functions.py  k600_functions.py  read.py
pyghgaq/gases/: CH4.py  CO2.py
pyghgaq/registry/: henry_registry.py  registry.py
src/PyGHGaq/: PyGHGaq.py
src/pyghgaq/: main.py
src/pyghgaq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyghgaq/functions/: functions.py  k600_functions.py  read.py
src/pyghgaq/gases/: CH4.py  CO2.py
